<resources>
    <string name="app_name">Feedback app</string>
    <string name="text">Greetings!</string>
    <string name="fname">First name</string>
    <string name="fnameh">Enter first name</string>
    <string name="lname">Last name</string>
    <string name="lnameh">Enter last name</string>
    <string name="phone">Phone number</string>
    <string name="phoneh">Enter phone number</string>
    <string name="comment">Comment</string>
    <string name="commenth">Type a comment</string>
    <string name="send">Send</string>
    <string name="reset">Reset</string>
    <string name="logo">logo</string>

</resources>